# FinanceTracker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: csvparser.cpp.2DE654224E056DA2.idx
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/login/: CMakeLists.txt  login.cpp  login.h
src/backend/parsing/: csvparser.cpp  csvparser.h
src/frontend/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  LoginManagerTests.cpp
